# claude-semantic-search

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  MCP_SERVER_README.md  README.md  install.sh  mypy.ini  pyproject.toml  test_indexing.py
configs/: README.md  claude_desktop_config.example.json  mcp_manifest.json
data/demo/: embeddings.faiss  metadata.db
data/test_fixtures/: sample_conversation.jsonl
docs/: cli-mcp-feature-parity.md  mcp-examples.md  mcp-folder-structure.md  mcp-implementation.md  mcp-server-plan.md  mcp-structure-visual.md
scripts/: benchmark_gpu_cpu.py  debug_batch_errors.py  debug_gpu_performance.py  debug_parsing_errors.py  find_bad_chunks.py  integration_demo.py  model_setup.py
src/: __init__.py  chunker.py  cli.py  embeddings.py  gpu_utils.py  mcp_server.py  parser.py  storage.py  watcher.py
tests/: __init__.py  test_chunk_validation.py  test_chunker.py  test_cli.py  test_embeddings.py  test_environment_setup.py  test_incremental_indexing.py  test_integration.py  test_mcp_project_filter.py  test_mcp_server.py  test_model_download.py  test_parser.py  test_project_filter.py  test_storage.py  test_watcher.py
