[project]
name = "claude-semantic-search"
version = "0.1.1"
description = "Semantic search system for Claude conversations"
authors = []
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=5.0.0",
    "faiss-cpu>=1.11.0",
    "tqdm>=4.67.1",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "huggingface-hub>=0.33.2",
    "scikit-learn>=1.7.0",
    "click>=8.2.1",
    "watchdog>=4.0.0",
    "psutil>=5.9.0",
    "mcp==1.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "flake8>=7.3.0",
]
# GPU dependencies need to be installed via conda due to Python version constraints
# gpu = [
#     "faiss-gpu>=1.7.2",
#     "torch>=2.7.1",
# ]

[project.scripts]
claude-search = "src.cli:search_command"
claude-index = "src.cli:index_command"
claude-stats = "src.cli:stats_command"
claude-watch = "src.cli:watch_command"
claude-start = "src.cli:start_command"
claude-stop = "src.cli:stop_command"
claude-status = "src.cli:status_command"
claude-search-mcp = "src.mcp_server:run"
setup-models = "scripts.model_setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=0",
    "-v"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
]
